# dragonBoot

./: .buildinfo  .clang-tidy  .flake8  .gitignore  .lgtm.yml  LICENSE  genindex.html  gettingStarted.html  index.html  meson.build  meson_options.txt  objects.inv  py-modindex.html  requirements-ci.txt  requirements.txt  runClangTidy.py  search.html  searchindex.js
.doctrees/: environment.pickle  gettingStarted.doctree  index.doctree
.doctrees/deploying/: firmware.doctree  gateware.doctree
.doctrees/firmware/: index.doctree
.doctrees/gateware/: descriptors.doctree  flash.doctree  index.doctree  luna.doctree
.doctrees/gateware/handlers/: dfu.doctree  index.doctree  windows.doctree
.github/workflows/: docs.yml
.lgtm/cpp-queries/: const-cast.ql  reinterpret-cast.ql
_static/: pygments.css  sphinx_construct.css
cross-files/: arm-none-eabi-cxc.meson  arm-none-eabi-system.meson  arm-none-eabi.meson  avr-cxc.meson  avr-system.meson  avr.meson
deploying/: firmware.html  gateware.html
docs/: conf.py  gettingStarted.md  index.md  requirements.txt
docs/deploying/: firmware.md  gateware.md
docs/firmware/: index.md
docs/gateware/: descriptors.md  flash.md  index.md  luna.md
docs/gateware/handlers/: dfu.md  index.md  windows.md
firmware/: bootloader.cxx  descriptors.cxx  index.html  meson.build
firmware/aarch32/: irqs.cxx
firmware/atxmega256a3u/: meson.build  platform.cxx
firmware/src/: bootloader.cxx  descriptors.cxx
firmware/src/atxmega256a3u/: linkerScript.ld
firmware/src/tm4c123gh6pm/: linkerScript.ld  meson.build
firmware/stm32f1/: linkerScript.ld  meson.build  platform.cxx  startup.cxx
firmware/tm4c123gh6pm/: meson.build  platform.cxx  startup.cxx
gateware/: .gitignore  descriptors.html  dragonBoot.py  flash.html  index.html  luna.html
gateware/dragonBoot/: __init__.py  bootloader.py  dfu.py  flash.py  ice40.py  logging.py  platform.py  spi.py  timeout.py  usb.py  warmboot.py
gateware/dragonBoot/sim/: dfu.py  flash.py  framework.py  spi.py  timeout.py
gateware/dragonBoot/sim/windows/: __init__.py  descriptorSet.py
gateware/dragonBoot/windows/: __init__.py  descriptorSet.py
gateware/handlers/: dfu.html  index.html  windows.html
include/: aarch32.hxx  atxmega256a3u.hxx  constants.hxx  platform.hxx  stm32f1.hxx  tm4c123gh6pm.hxx
scripts/: get_fw_size.py
src/: bootloader.cxx  descriptors.cxx  meson.build
src/atxmega256a3u/: meson.build  platform.cxx  startup.cxx
src/tm4c123gh6pm/: linkerScript.ld  meson.build  platform.cxx  startup.cxx
