option(
	'chip', type: 'combo', description: 'Which microcontroller you wish you target', choices:
	[
		'unknown',
		'tm4c123gh6pm',
		'stm32f1',
		'atxmega256a3u'
	]
)

option(
	'target', type: 'combo', description: 'What target device you want to build for',
	value: 'generic', choices:
	[
		'generic',
		'bmp'
	]
)
